# librubyembedded

./: .gitignore  Rakefile
app/: Gemfile
bootstrap/: Makefile.am  bootstrap.c  config.status  configure  configure.ac
bootstrap/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
rake/: bootstrap.rake  gems.rake  library.rake  ruby.rake
